--- a/project/src/main/resources/static/css/index.css
+++ b/project/src/main/resources/static/css/index.css
@@ -7,30 +7,17 @@
  */
 
 
-body{background: #FFF;}
+body{background: #FFF;overflow-x:hidden;}
 
 /** 首页 */
 
 /*导航部分*/
-.nav{width: 100%; height: 80px; box-shadow: 0 3px 3px 0 #CCC; background: #FFF; position: fixed; left: 0; top: 0; z-index: 999; overflow: hidden; transition: 0.3s}
-.nav.index{background: rgba(255, 255, 255 ,0.8); box-shadow: 0 0 0 0 rgba(0,0,0,0.05);}
-.nav.scroll{ background: #FFF; box-shadow: 0 3px 3px 0 rgba(0,0,0,0.05); transition: 0.3s}
-.nav .layui-container{position: relative; transition: all 400ms ease-out;}
-.nav .nav-logo{height: 100%; position: absolute; top: 0; left: 15px; line-height: 80px;}
-.nav .nav-list{display: inline-block; height: 80px;}
-.nav .nav-list button{width: 25px; height: 30px; position: absolute; top: 30px; right: 15px; background-color: transparent; border: none; outline: none; cursor: pointer;}
-.nav .nav-list button span{display: block; width: 25px; height: 2px; background: #2db5a3; margin-bottom: 6px; transition: 0.5s;}
-.nav .nav-list button span.spa1{transform: rotate(45deg);}
-.nav .nav-list button span.spa3{transform: rotate(-45deg) translate(5px,-5px);}
-.nav .layui-nav{width: 100%; position: absolute; top: 80px; right: 0; color: #000; background: transparent;}
-.nav .layui-nav .layui-nav-item{display: block; line-height: 60px;}
-.nav .layui-nav *{font-size: 18px;}
-.nav .layui-nav .layui-nav-item a{padding: 0 0; color: #000;}
-.nav .layui-nav-bar,
-.nav .layui-nav .layui-this:after{height: 2px; background-color: #2db5a3;}
-.nav .layui-nav .layui-this a
-,.nav .layui-nav .layui-nav-item a:hover{color: #2db5a3;}
-
+.breadcrumb{margin-left: 1100px;}
+.head .pic{width: 100%;height:50px;border:solid 5px #CCCCCC !important;}
+.layui-nav .layui-nav-item{margin-left:20px;}
+.layui-nav{height: 60px;width: 80%;margin: 0 auto;}
+.daohang{text-align:center;}
+.head{margin-top: 0;height: 100;}
 /*轮播*/
 #banner img{min-width: 100%; height: 898px;}
 #banner .panel{width: 400px; position: absolute; top: 25%; left: 50%; margin-left: -200px; text-align: center;}
@@ -52,21 +39,25 @@ body{background: #FFF;}
 .main-product .content img:hover{transform: rotateY(180deg);}
 
 /*主体-服务*/
-.main-service{background: #f8f8f8;}
-.main-service .content{position: relative;}
-.main-service .content .content-left{width: 50%;}
-.main-service .content .content-left img{width: 100%;}
-.main-service .content .content-right{box-sizing: border-box; background: #FFF; padding: 58px 40px 0 48px; width: 50%; height: 100%; position: absolute; top: 0; right: 0; transition: 0.3s; overflow: hidden;}
-.main-service .content .content-right p{color: #adadad; line-height: 32px; overflow: hidden; text-overflow: ellipsis;}
-.main-service .content .content-right p.label{font-size: 16px; color: #4a4a4a;}
-.main-service .content .content-right span{display: block; width: 50px; height: 2px; background: #2cb6a1; margin-bottom: 23px;} 
-.main-service .content .content-right:hover{box-shadow: 2px 2px 2px #EEE; transition: 0.3s;}
+.main-service .title{margin-left: 15px;width: 100%;display:inline-block;}
+.main-service .main{display: inline;margin-top:8px;display:inline-block;}
+.main-service .more{display: inline;margin-right:25px;margin-top:8px;display:inline-block;float:right}
+.main-service .more a{ color:#0099FF; }
+.main-service .main a{color:#0099FF;font-size:18px;font-weight: bold;}
+.main-service .table{margin-top:-15px;margin-left: 12px;}
+.main-service table{border-collapse:separate; border-spacing:5px; width: 100%; height: 100%;table-layout: fixed;}
+.main-service table td{white-space:nowrap; overflow: hidden;text-overflow: ellipsis;}
+.col-top{width: 33% !important;}
+.col-bottom{width: 46.5% !important;}
+
+.main-service{background: #FFFFFF;margin-top: 25px;}
+.main-service .content{position: relative;border:solid 1px #797979 !important;width: 320px;height: 280px;overflow:hidden;}
 .main-service .service-more{padding-top: 80px; padding-bottom: 80px; text-align: center;}
 .main-service .service-more a{padding: 10px 62px; font-size: 23px; line-height: 46px;color: #FFF; background: #7fd3c6; border-radius: 3px;}
 
 /*底部*/
-.footer{padding-bottom: 70px; background: #5e6664;}
-.footer .footer-web{padding-top: 50px; padding-bottom: 63px;}
+.footer{padding-bottom: 20px; background: #5e6664;}
+.footer .footer-web{padding-top: 25px; padding-bottom: 20px;}
 .footer .footer-web a{color: #a5aaa9; line-height: 22px; margin-right: 20px; transition: 0.3s;}
 .footer .footer-web a:hover{color: #dce1e0; transition: 0.3s;}
 .footer .footer-contact{color: #FFF;}
@@ -239,6 +230,6 @@ body{background: #FFF;}
   .layui-container{width: 1200px; padding: 0;}
   .main-about .tabJob .content:last-child{margin-bottom: 180px;}
   .nav .nav-logo{position: absolute; top: 0; left: 0;}
-  .layui-col-space80{margin: -40px;}
-  .layui-col-space80>*{padding: 40px;}
+  .layui-col-space80{margin: -30px;}
+  .layui-col-space80>*{padding:10px;}
 }
